compiler/tests/fixtures/invalid/syntax/unclosed_string_literal.viv
// Invalid: Unclosed string literal

action greet:
    roles:
        @greeter:
            as: initiator
    effects:
        @greeter.mood = "happy
